--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "authors": [
         {
             "name": "Max Piskun",
-            "email": ""
+            "email": "s5660max@gmail.com"
         }
     ],
     "require": {
